<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Balizas</string>
    <string name="hello_world">Balizas</string>
    <string name="action_settings">Configuración</string>
    <!-- LAYOUT -->
    <!-- comunication-->
    <string name="Data_send">Pulse para enviar los datos</string>
    <string name="Data_get">Pulse para obtener los datos almacenados del dispositivo</string>
    <string name="ipport_TextView">Ip:port:</string>
    <string name="default_import_editText">130.206.114.226:1026</string>
    <string name="device_TextView">Nombre del dispositivo:</string>
    <string name="default_device_editText">test</string>
    <string name="datoTOsend_TextView">payload:</string>
    <string name="default_datoTOsend">time=1234</string>
    <string name="send_button">Enviar:</string>
    <string name="get_button">Obtener:</string>
    <string name="error">El servidor no responde:</string>
    <string name="error_Server">Error del servidor remoto:</string>
    <string name="saved">Se a guardado los datos del dispositivo :</string>
    <string name="with_text">, con texto asociado= </string>
    <string name="saved_localandremote">, en el servidor remoto y en la base de datos local</string>
    <string name="saved_error">  ERROR : </string>
    <string name="saved_not_local">,Se pudo guardar en el Servidor remoto pero no en la base de datos Local </string>
    <string name="device_alreadi_exit">,No se pudo almacenar, pues el dispositivo ya esiste en la base de datos Local </string>
    <!-- activity_first_old -->
    <string name="first_text">Es la primera vez que abre esta aplicacion. La estructura de la base de datos a de construirse.</string>
    <string name="button_Fill_Proyect">Buscar Proyectos</string>
    <string name="button_Build">Construir</string>
    <string name="Build_result">No Construir</string>
    <!-- activity_first -->
    <string name="button_Start">Comenzar</string>
    <string name="start_text">It´s the first time you open this app. You should change the SETTINGS:
                              \n
                              \nWork mode:
                              \n  1-Work like a INSTALLER(detect beacon and save associate text).(default)
                               \n  2-o like a USER(hear the associate text from a beacon wen you are near).
                               \nDefault server address:
                               \n  Is the public (url:port) of your NGSI server.
                               \n  This APP was tested using the image Orion 4.22 of FIWARE platform
                               \n  (www.cloud.lab.fiware.org).
                               \n
                               \nMore information in: i-boblid.host56.com
                               </string>
    <!-- new project-->
    <string name="start_text_installer">It´s the first time you use this app like installer.
                                       \nYou should define the project where the beacons will be associate.</string>
    <string name="project_name_description">The project name has to be a unique short identifier.</string>
    <string name="project_name">PROJECT NAME:</string>
    <string name="save">GUARDAR</string>
    <string name="default_project_name">Project_1</string>
    <string name="specification_name_description">You can save any text here.</string>
    <string name="specification_name">PROJECT SPECIFICATION:</string>
    <string name="default_project_specification">This is my first project </string>
    <!-- activity_installer-->
    <string name="cancel">Cancelar</string>
    <string name="signin">Continuar</string>
    <string name="password"> Clave :</string>
    <string name="select_project_textView">SELECT PROJECT:</string>
    <string name="new_project_text">You should create a Project</string>
    <string name="new_project_button">New project</string>
    <string name="find_ibeacon_button">BUSCAR</string>
    <string name="white_line"></string>
    <string name="search_i_beacon_textView"> PASOS: 1-Escriba el texto a asociar al i-beacon.\n2-Coloque el teléfono sobre el i_beacon, pulse sobre BUSCAR. El i-beacon con nivel de potencia mayor es el que desea almacenar, fíjese en el nombre.\n3-Muévase a la posición en la que desea que empiece a reproducirse el texto.Pulse de nuevo en BUSCAR, tras esto, pulse sobre el nombre del dispositivo y sera almacenado.</string>
    <string name="save_button">GUARDAR</string>
    <string name="device_specification">MENSAJE A REPRODUCIR:</string>
    <string name="device_specification_description">Escriba el texto a asociar al dispositibo</string>
    <string name="default_device_specification">Ascensor</string>
    <string name="data_validation">Validación de datos:</string>
    <string name="no_new_device">No hay dispositivos nuevos detectados</string>
    <string name="saved_conflict_in_the_project">, guardado en el servidor remoto, pero no a podido ser almacenado el la base de datos local</string>
    <string name="update_existing_device">"Se procede a actualidar el dispositivo, cambiando el texto asociado : "</string>
    <string name="by">" por : "</string>
    <string name="and_the_coberage_reguion">" y la potencia a partir de la cual se reproducira el texto asociado que antes era : "</string>
    <!-- activity-and-service-for-user -->
    <string name="iniciado">Detectando balizas </string>
    <string name="speakStop">Deteción de balizas detenida. Para iniciar, pulse de nuevo . </string>
    <string name="salirParado">Saliendo con servicio detenido, para arancar de nuevo el servicio, a de entrar en la aplicación y pulsar en la parte inferior de la pantalla</string>
    <string name="salir">Se ciera la ventana de la aplicación, pero el servicio de deteción de valizas sigue activo, para detenerlo entrar de nuevo en la aplicación y punsar en la parte inferior de la pantalla</string>
    <string name="stop">DETENER</string>
    <string name="user_first_textView">Presione el boton para iniciar la deteccion de I_beacons.</string>
    <string name="user_first_text">Presione el boton para detener el servicio de deteción de I_beacons</string>
    <string name="can_detect_Ibeacon">SERVICIO DE DETECION DE I-BEACON INICIALIZADO EN SEGUNDO PLANO.</string>
    <string name="service_stopped"> DETENER SERVICIO </string>
    <string name="user_second_textView">Puede avandonar la aplicación sin que el servicio se detenga, continuara reciviendo notificaciones de la presencia de i_beacons cercanos a ustes.</string>
    <string name="stopping"> Parando el servicio,Bluetooth esta apagado </string>
    <string name="turn_on_Bluetooth"> Por favor, encienda su Bluetooth</string>
    <string name="can_not_detect_Ibeacon"> NO SE PUEDE DETECTAR I-BEACONS </string>
    <string name="Out_Of">  salistes de  </string>
    <string name="approach_to"> acercandote a </string>
    <string name="move_away_to"> alejandote de </string>
    <string name="close_up"> Estas muy cerca de </string>
    <string name="stop_service"> PARAR SERVICIO\n\n\n\n\n\n\nPARAR SERVICIO\n\n\n\n </string>
    <string name="installer_mode"> Cambiar a modo instalador </string>
    <string name="start_service"> INICIAR SERVICIO\n\n\n\n\n\n\nINICIAR SERVICIO\n\n\n\n</string>
    <string name="back_pressed"> I-Boblind en ejecución. Si desea detenerlo, deve de abrir la aplicación y presionar sobre el botón de PARA SERVICIO </string>
    <!-- settings -->
    <string name="title_activity_settings">Configuraciones</string>
    <string name="pref_header_general">General</string>
    <string name="pref_work_mode"> MODO DE TRABAJO: </string>

    <string-array name="pref_work_mode_list_titles">
        <item>Instalador</item>
        <item>Usuario</item>
    </string-array>
    <string-array name="pref_work_mode_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>

   <!-- <string name="pref_save_mode">Select save mode</string>

    <string-array name="pref_work_save_list_titles">
        <item>LOCAL</item>
        <item>SERVER</item>
    </string-array>
    <string-array name="pref_work_save_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>-->
    <string name="pref_server">url:port DEL SERVIDOR REMOTO NGSI10:</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

    <string name="pref_get_url">WRITES GET URL:</string>
    <string name="pref_default_get_url">http://10.27.39.100:8080/get/</string>
    <string name="measuresFORaverage">Steps to stabilize the received power:</string>
    <string name="pref_default_measuresFORaverage">3</string>

    <string name="diferAverage">Difference between Measures:</string>
    <string name="pref_default_diferAverage">2</string>

    <string name="movement">Movement sensitivity:</string>
    <string name="pref_default_movement">11</string>

    <string name="time">Time sensitivity:</string>
    <string name="pref_default_time">20</string>
</resources>

