<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Installer_Activity"    >
    <!-- tools:context=".menu"-->
    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_project_textView"
        android:id="@+id/select_project_textView"
        android:layout_gravity="center_horizontal" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>
    <Spinner
        android:id="@+id/projects_show_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/new_project_button"
            android:id="@+id/new_project_button"
            android:layout_gravity="center_horizontal" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/device_specification"
            android:id="@+id/device_specification_textView"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/device_specification_description"
            android:id="@+id/device_specification_description_textView"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/device_specification_editText"
            android:layout_gravity="center_horizontal"
            android:text="@string/default_device_specification"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_i_beacon_textView"
        android:id="@+id/get_textView"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/material_blue_grey_950"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="bottom"
        android:id="@+id/find_ibeacon_button"
        android:onClick="onScan"
        android:text="Scan"
         />

        <ListView
            android:id="@+id/ibeacon_ListView"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_above="@+id/refresh_button"
            />

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_validation"
            android:id="@+id/intaller_response_textView"
            android:layout_gravity="center_horizontal"
             android:textSize="15sp"
             android:textColor="@color/material_deep_teal_200"/>


    </LinearLayout>


</ScrollView>