<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <!-- tools:context=".menu"-->
    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_first_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            android:id="@+id/user_first_textView"
            android:layout_marginTop="@dimen/abc_action_bar_progress_bar_size"
            android:layout_marginBottom="@dimen/abc_action_bar_progress_bar_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_second_textView"
            android:id="@+id/user_second_textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/abc_action_bar_progress_bar_size"
           />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/stop_service"
            android:id="@+id/user_button"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/abc_action_bar_progress_bar_size"
            />

    </LinearLayout>

</ScrollView>